[Refactor] fix code align

--- a/react_frontend/src/assets/css/sysmng.css
+++ b/react_frontend/src/assets/css/sysmng.css
@@ -25,10 +25,6 @@
     gap: 3rem;
 }
 
-#menuName {
-    margin-top: 100px;
-}
-
 .text_field {
     border-radius: 15px;
     margin-left: auto;
